--- a/developer-docs/integrations/introduction.mdx
+++ b/developer-docs/integrations/introduction.mdx
@@ -2,21 +2,127 @@
 title: 'Integrations'
 description: "Integrate Alchemyst's memory into your AI Stack"
 ---
-Alchemyst is the context cloud for LLMs and AI Agents, purpose-built to serve as the connective tissue of your entire AI stack. It provides a unified memory layer that bridges data ingestion, context management, orchestration, inference, and deployment. By acting as a central hub for context and knowledge, Alchemyst enables your AI systems to access, share, and persist information across tools, sessions, and workflows.
 
-With seamless integrations at every layer, Alchemyst empowers you to:
+# Integrations Overview
 
-- Aggregate and enrich data from diverse sources, making it accessible to LLMs and agents in real time.
-- Maintain persistent, context-aware memory that enhances reasoning, retrieval, and generation.
-- Orchestrate complex workflows by connecting specialized frameworks, libraries, and platforms.
-- Deploy AI solutions that are modular, scalable, and easy to maintain.
+Alchemyst's integrations enable you to seamlessly connect our context cloud with your existing AI development workflow. Whether you're building with popular frameworks like LangChain and LlamaIndex, using AI-powered development tools like Claude Desktop and VS Code, or working with modern AI SDKs, Alchemyst provides the context layer that makes your AI systems smarter and more capable.
 
-Integrations are at the core of Alchemyst's philosophy, ensuring that your AI applications remain flexible and future-proof as the ecosystem evolves. Whether you're prototyping or scaling to production, Alchemyst's context cloud unlocks new possibilities for innovation and collaboration across your AI stack.
+## Why Use Alchemyst Integrations?
 
+Alchemyst serves as the connective tissue of your AI stack, providing:
 
-## Supported Integrations
+- **Unified Memory Layer**: Maintain persistent, context-aware memory across different tools and sessions
+- **Real-time Context Access**: Enable your AI systems to access and share information instantly
+- **Framework Flexibility**: Work with your preferred AI frameworks without vendor lock-in  
+- **Scalable Architecture**: Build solutions that grow from prototype to production seamlessly
 
-Get started by integrating Alchemyst's memory with your favorite AI frameworks and tools.
+## Supported Platforms & Tools
+
+Alchemyst integrates with three main categories of tools:
+
+### 🛠️ AI Development Frameworks
+Connect Alchemyst's context management with popular AI development libraries and SDKs.
+
+### 🤖 AI-Powered Development Tools  
+Enhance your coding experience with context-aware AI assistants in your favorite editors and platforms.
+
+### 📚 Direct SDK Access
+Build custom integrations using our native Python and TypeScript SDKs.
+
+## How to Get Started
+
+### Step 1: Choose Your Integration Method
+
+<Columns cols={3}>
+  <Card
+    title="SDKs"
+    icon="code"
+    href="/integrations/sdk/python-sdk"
+  >
+    Direct integration with Python or TypeScript SDKs
+  </Card>
+  <Card
+    title="AI Frameworks"
+    icon="robot"
+    href="/integrations/third-party/langchain/python"
+  >
+    Use with LangChain, LlamaIndex, Vercel AI SDK
+  </Card>
+  <Card
+    title="MCP Clients"
+    icon="plug"
+    href="/mcps/introduction"
+  >
+    Connect to Claude Desktop, VS Code, Cursor
+  </Card>
+</Columns>
+
+### Step 2: Authentication Setup
+
+All Alchemyst integrations require an API key for authentication:
+
+1. **Get your API key** from the [Alchemyst Dashboard](https://app.getalchemystai.com)
+2. **Set environment variable**: `ALCHEMYST_AI_API_KEY=your_api_key_here`
+3. **Configure your integration** using the specific setup guide for your chosen platform
+
+<Note>
+Store your API key securely using environment variables or secure credential management systems. Never commit API keys to version control.
+</Note>
+
+### Step 3: Basic Usage Example
+
+Here's a minimal example using our Python SDK:
+
+```python
+import os
+from alchemyst_ai import AlchemystAI
+
+# Initialize client
+client = AlchemystAI(
+    api_key=os.environ.get("ALCHEMYST_AI_API_KEY")
+)
+
+# Add context
+response = client.v1.context.add(
+    documents=[{
+        "content": "Your contextual information here",
+        "metadata": {"source": "user_upload"}
+    }],
+    source="my_app",
+    context_type="resource"
+)
+
+# Search context  
+results = client.v1.context.search(
+    query="What information do I need?",
+    similarity_threshold=0.8
+)
+```
+
+## Available Integrations
+
+### Native SDKs
+
+<Columns cols={2}>
+  <Card
+    title="Python SDK"
+    icon="python"
+    href="/integrations/sdk/python-sdk"
+    horizontal
+  >
+    Full-featured Python client with async support and comprehensive error handling.
+  </Card>
+  <Card
+    title="TypeScript SDK"
+    icon="js"
+    href="/integrations/sdk/typescript-sdk"
+    horizontal
+  >
+    Type-safe TypeScript/JavaScript SDK with modern async/await patterns.
+  </Card>
+</Columns>
+
+### AI Development Frameworks
 
 <Columns cols={2}>
   <Card
@@ -25,23 +131,15 @@ Get started by integrating Alchemyst's memory with your favorite AI frameworks a
     href="/integrations/third-party/aisdk"
     horizontal
   >
-    Integrate with Vercel's AI SDK for seamless TypeScript/JavaScript AI development.
+    Seamless integration with Vercel's AI SDK for modern web applications.
   </Card>
   <Card
-    title="Agno (coming soon)"
-    icon="python"
-    href="/integrations/third-party/agnoagi"
-    horizontal
-  >
-    Python-first integration for Agno (coming soon).
-  </Card>
-  <Card
-    title="Langchain"
+    title="LangChain"
     icon="code"
     href="/integrations/third-party/langchain/python"
     horizontal
   >
-    Use Alchemyst with Langchain for advanced LLM workflows in Python and JS.
+    Enhanced LLM workflows with persistent context in Python and JavaScript.
   </Card>
   <Card
     title="LlamaIndex"
@@ -49,6 +147,72 @@ Get started by integrating Alchemyst's memory with your favorite AI frameworks a
     href="/integrations/third-party/llamaindex/python"
     horizontal
   >
-    Integrate with LlamaIndex for data-augmented generation and retrieval.
+    Powerful data-augmented generation with Alchemyst's context layer.
+  </Card>
+  <Card
+    title="Agno AI"
+    icon="python"
+    href="/integrations/third-party/agnoagi"
+    horizontal
+  >
+    Python-first integration for advanced AI agent workflows.
   </Card>
 </Columns>
+
+### MCP (Model Context Protocol) Integrations
+
+<Columns cols={2}>
+  <Card
+    title="Claude Desktop"
+    icon="claude-2"
+    href="/mcps/claude-desktop"
+    horizontal
+  >
+    Enhance Claude Desktop with your custom context and knowledge base.
+  </Card>
+  <Card
+    title="VS Code"
+    icon="visual-studio-code"
+    href="/mcps/visual-studio-code"
+    horizontal
+  >
+    Bring context-aware AI assistance directly into your VS Code workflow.
+  </Card>
+  <Card
+    title="Cursor"
+    icon="cursor-logo"
+    href="/mcps/cursor"
+    horizontal
+  >
+    Supercharge Cursor's AI capabilities with persistent project context.
+  </Card>
+  <Card
+    title="Learn about MCP"
+    icon="plug"
+    href="/mcps/introduction"
+    horizontal
+  >
+    Understand how Model Context Protocol enhances AI tool integration.
+  </Card>
+</Columns>
+
+## Next Steps
+
+### 🚀 Quick Start Guides
+- [Python SDK Tutorial](/integrations/sdk/python-sdk) - Complete setup and usage examples
+- [TypeScript SDK Tutorial](/integrations/sdk/typescript-sdk) - Modern JavaScript integration patterns
+- [MCP Setup Guide](/mcps/introduction) - Connect to your favorite AI development tools
+
+### 📖 Advanced Resources  
+- [API Reference](/api-reference/introduction) - Comprehensive API documentation
+- [Example Projects](/example-projects/introduction) - Real-world implementation examples
+- [Cookbook](https://github.com/alchemyst-ai/awesome-saas) - Community-driven integration patterns
+
+### 💬 Need Help?
+- Check our [GitHub Discussions](https://github.com/alchemyst-ai/alchemyst-sdk-python/discussions) for community support
+- Review [troubleshooting guides](/integrations/sdk/python-sdk#handling-errors) in our SDK documentation
+- Contact our support team for enterprise integration assistance
+
+---
+
+Ready to enhance your AI workflow with persistent, intelligent context? Choose an integration method above and start building smarter AI applications today.
